Added HTML template for the 2 pages

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,22 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+
+  <a href="#" title="sroll" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+
+  <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
+  <script type="text/javascript" src="js/owl.carousel.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/slick.min.js"></script>
+  <script type="text/javascript" src="js/vit-gallery.js"></script>
+  <script type="text/javascript" src="js/jquery.countTo.js"></script>
+  <script type="text/javascript" src="js/jquery.appear.min.js"></script>
+  <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap-select.js"></script>
+  <script type="text/javascript" src="js/slick.min.js"></script>
+  <script type="text/javascript" src="js/jquery.littlelightbox.js"></script>
+
+  <script type="text/javascript" src="js/function.js"></script>
 </body>
 
 </html>
