--- a/public/Kamyas.html
+++ b/public/Kamyas.html
@@ -144,6 +144,20 @@
                             <div class="dropdown-menu">
                                 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
                             </div>
+                            <div class="dropdowndesc">
+                              <span>Habitat</span>
+                              <i class="icon-caret"></i>
+                          </div>                                    
+                          <div class="dropdown-menu">
+                              <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                          </div>
+                          <div class="dropdowndesc">
+                            <span>Domestication</span>
+                            <i class="icon-caret"></i>
+                        </div>                                    
+                        <div class="dropdown-menu">
+                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                        </div>
                         </li>
                     </ul>
                 </div>
@@ -151,7 +165,315 @@
         </div>
     </div>
     </div>
-    
+
+    <div class="single-product-detail row">
+      <div class="col-md-6">
+        <div class="single-product-img">
+          <div class="pro-slide js-product-slider">
+            <div class="item">
+              <img src="images/Oregano/pro_01.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Oregano/pro_02.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Oregano/pro_05.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Oregano/pro_06.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Oregano/pro_07.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+          </div>
+          <div class="pro-slide-carousel js-carousel-product">
+            <div class="item">
+              <img src="images/Oregano/pro_01.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Oregano/pro_02.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Oregano/pro_05.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Oregano/pro_06.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Oregano/pro_07.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="single-product-infor">
+            <div class="pro-title">
+                <h1>Oregano</h1>
+            </div>
+
+            <div class="pro-tabs">
+                <div class="tabs-desc">
+                    <ul class="navbar-tabs">
+                        <li class="dropdown open">
+                            <div class="dropdowndesc">
+                                <span>Description</span>
+                                <i class="icon-caret"></i>
+                            </div>                                    
+                            <div class="dropdown-menu">
+                                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                            </div>
+                            <div class="dropdowndesc">
+                              <span>Habitat</span>
+                              <i class="icon-caret"></i>
+                          </div>                                    
+                          <div class="dropdown-menu">
+                              <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                          </div>
+                          <div class="dropdowndesc">
+                            <span>Domestication</span>
+                            <i class="icon-caret"></i>
+                        </div>                                    
+                        <div class="dropdown-menu">
+                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                        </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="single-product-detail row">
+      <div class="col-md-6">
+        <div class="single-product-img">
+          <div class="pro-slide js-product-slider">
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_01.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_02.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_05.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_06.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_07.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+          </div>
+          <div class="pro-slide-carousel js-carousel-product">
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_01.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_02.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_05.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_06.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Golden-Pothos/pro_07.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="single-product-infor">
+            <div class="pro-title">
+                <h1>Golden Pothos</h1>
+            </div>
+
+            <div class="pro-tabs">
+                <div class="tabs-desc">
+                    <ul class="navbar-tabs">
+                        <li class="dropdown open">
+                            <div class="dropdowndesc">
+                                <span>Description</span>
+                                <i class="icon-caret"></i>
+                            </div>                                    
+                            <div class="dropdown-menu">
+                                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                            </div>
+                            <div class="dropdowndesc">
+                              <span>Habitat</span>
+                              <i class="icon-caret"></i>
+                          </div>                                    
+                          <div class="dropdown-menu">
+                              <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                          </div>
+                          <div class="dropdowndesc">
+                            <span>Domestication</span>
+                            <i class="icon-caret"></i>
+                        </div>                                    
+                        <div class="dropdown-menu">
+                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                        </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="single-product-detail row">
+      <div class="col-md-6">
+        <div class="single-product-img">
+          <div class="pro-slide js-product-slider">
+            <div class="item">
+              <img src="images/Croton/pro_01.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Croton/pro_02.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Croton/pro_05.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Croton/pro_06.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Croton/pro_07.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+          </div>
+          <div class="pro-slide-carousel js-carousel-product">
+            <div class="item">
+              <img src="images/Croton/pro_01.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Croton/pro_02.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Croton/pro_05.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Croton/pro_06.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Croton/pro_07.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="single-product-infor">
+            <div class="pro-title">
+                <h1>Croton</h1>
+            </div>
+
+            <div class="pro-tabs">
+                <div class="tabs-desc">
+                    <ul class="navbar-tabs">
+                        <li class="dropdown open">
+                            <div class="dropdowndesc">
+                                <span>Description</span>
+                                <i class="icon-caret"></i>
+                            </div>                                    
+                            <div class="dropdown-menu">
+                                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                            </div>
+                            <div class="dropdowndesc">
+                              <span>Habitat</span>
+                              <i class="icon-caret"></i>
+                          </div>                                    
+                          <div class="dropdown-menu">
+                              <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                          </div>
+                          <div class="dropdowndesc">
+                            <span>Domestication</span>
+                            <i class="icon-caret"></i>
+                        </div>                                    
+                        <div class="dropdown-menu">
+                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                        </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="single-product-detail row">
+      <div class="col-md-6">
+        <div class="single-product-img">
+          <div class="pro-slide js-product-slider">
+            <div class="item">
+              <img src="images/Mango/pro_01.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Mango/pro_02.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Mango/pro_05.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Mango/pro_06.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Mango/pro_07.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+          </div>
+          <div class="pro-slide-carousel js-carousel-product">
+            <div class="item">
+              <img src="images/Mango/pro_01.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Mango/pro_02.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Mango/pro_05.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Mango/pro_06.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+            <div class="item">
+              <img src="images/Mango/pro_07.jpg" class="img-responsive" alt="Product" title="images products">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="single-product-infor">
+            <div class="pro-title">
+                <h1>Mango</h1>
+            </div>
+
+            <div class="pro-tabs">
+                <div class="tabs-desc">
+                    <ul class="navbar-tabs">
+                        <li class="dropdown open">
+                            <div class="dropdowndesc">
+                                <span>Description</span>
+                                <i class="icon-caret"></i>
+                            </div>                                    
+                            <div class="dropdown-menu">
+                                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                            </div>
+                            <div class="dropdowndesc">
+                              <span>Habitat</span>
+                              <i class="icon-caret"></i>
+                          </div>                                    
+                          <div class="dropdown-menu">
+                              <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                          </div>
+                          <div class="dropdowndesc">
+                            <span>Domestication</span>
+                            <i class="icon-caret"></i>
+                        </div>                                    
+                        <div class="dropdown-menu">
+                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                        </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
   </section>
   
 
