--- a/public/Oregano.html
+++ b/public/Oregano.html
@@ -47,7 +47,7 @@
     <div class="container-fluid">
       <div class="inner row">
         <div class="logo col-lg-2 col-md-2">
-          <a href="/" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
+          <a href="Floradex.html" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
         </div>
         <div class="header-right col-lg-10 col-md-10">
           <div class="main-menu">
