Fixed Menu bar overlapping with logo

--- a/public/Floradex.html
+++ b/public/Floradex.html
@@ -53,7 +53,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <header id="main-header" class="header-absolute hidden-sm hidden-xs">
+  <header id="main-header" class="header-v6 hidden-sm hidden-xs">
     <div class="container-fluid">
       <div class="inner row">
         <div class="logo col-lg-2 col-md-2">
