--- a/public/Kamyas.html
+++ b/public/Kamyas.html
@@ -39,27 +39,24 @@
 </head>
 
 <body class="single-product">
-  <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
-
-  <header id="main-header" class="header-absolute hidden-sm hidden-xs">
-    <div class="container-fluid">
-      <div class="inner row">
-        <div class="logo col-lg-2 col-md-2">
-          <a href="/" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
-        </div>
-        <div class="header-right col-lg-10 col-md-10">
-          <div class="main-menu">
-            <div id="menu-popup" class="menu-popup">
-              <div class="burger-menu"><span></span></div>
-            </div>
+    <!-- HEADER -->
+    <header id="main-header" class="header-v6 hidden-sm hidden-xs">
+      <div class="container-fluid">
+        <div class="inner row">
+          <div class="logo col-lg-2 col-md-2">
+            <a href="/" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
           </div>
-
+          <div class="header-right col-lg-10 col-md-10">
+            <div class="main-menu">
+              <div id="menu-popup" class="menu-popup">
+                <div class="burger-menu"><span></span></div>
+              </div>
+            </div>
+  
+          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
   <header id="header_mobile" class="header-mobile-default hidden-lg hidden-md">
     <div class="header-top">
@@ -207,62 +204,62 @@
 
   <footer class="footer">
     <div class="container">
-      <div class="footer-bottom">
-        <div class="wrap-copyright">
-          <div class="copyright">
-            Copyright © 2022 IdentiPlant. Created with [heart icon] by<a href="#">Group 4</a>.
-          </div>
-          <div class="countries">
-            <img src="images/" alt="insert PLM Logo" />Pamantasan ng Lungsod ng Maynila
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
-            <div class="menu-footer">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Floradex</a></li>
-                <li><a href="#"> Terms of Use </a></li>
-                <li><a href="#"> Privacy Policy </a></li>
-                <li><a href="#"> Contact Us </a></li>
-              </ul>
+        <div class="footer-bottom">
+            <div class="wrap-copyright">
+                <div class="copyright">
+                    Copyright © 2022 IdentiPlant. Created with <i class="fa fa-heart"></i> by<a href="#">Group 4</a>.
+                </div>
+                <div class="countries">
+                    <img src="images/logo-white.png" alt="logo" />Pamantasan ng Lungsod ng Maynila
+                </div>
             </div>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
-            <div class="social">
-              <a href="#" title="linkedin">
-                <i class="fa fa-linkedin"></i>
-              </a>
-              <a href="#" title="instagram">
-                <i class="    fa fa-instagram"></i>
-              </a>
-              <a href="#" title="GitHub">
-                <i class="fa fa-github"></i>
-              </a>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
+                    <div class="menu-footer">
+                        <ul>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="../floradex.html">Floradex</a></li>
+                            <li><a href="/">  Terms of Use </a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
+                    <div class="social">
+                        <a href="#" title="linkedin">
+                            <i class="fa fa-linkedin"></i>
+                        </a>
+                        <a href="#" title="instagram">
+                            <i class="    fa fa-instagram"></i>
+                        </a>
+                        <a href="https://github.com/proDev-Theron/dip-plantidentifier" title="GitHub">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </footer>
+</footer>
 
 
 
-  <a href="#" title="sroll" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
 
-  <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
-  <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/slick.min.js"></script>
-  <script type="text/javascript" src="js/vit-gallery.js"></script>
-  <script type="text/javascript" src="js/jquery.countTo.js"></script>
-  <script type="text/javascript" src="js/jquery.appear.min.js"></script>
-  <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap-select.js"></script>
-  <script type="text/javascript" src="js/slick.min.js"></script>
-  <script type="text/javascript" src="js/jquery.littlelightbox.js"></script>
-
-  <script type="text/javascript" src="js/function.js"></script>
+    <!--SCOLL TOP-->
+    <a href="#" title="sroll" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+    <!--END / SROLL TOP-->
+    <!-- LOAD JQUERY -->
+    <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/vit-gallery.js"></script>
+    <script type="text/javascript" src="js/jquery.countTo.js"></script>
+    <script type="text/javascript" src="js/jquery.appear.min.js"></script>
+    <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-select.js"></script>
+    <script type="text/javascript" src="js/jquery.littlelightbox.js"></script>
+    <!-- Custom jQuery -->
+    <script type="text/javascript" src="js/function.js"></script>
 </body>
 
 </html>
