Golden Pothos Fix

--- a/public/Floradex.html
+++ b/public/Floradex.html
@@ -61,11 +61,10 @@
         </div>
         <div class="header-right col-lg-10 col-md-10">
           <div class="main-menu">
-            <div id="menu-popup" class="menu-popup">
+            <div id="menu-popup">
               <div class="burger-menu"><span></span></div>
             </div>
           </div>
-
         </div>
       </div>
     </div>
@@ -104,16 +103,16 @@
           <img src="images/FloraDex/Mango.png" alt="mango.png" id="plants">
       </a>
       <a href="Croton.html">
-          <img src="images/FloraDex/Croton.png" alt="mango.png" id="plants">
+          <img src="images/FloraDex/Croton.png" alt="croton.png" id="plants">
       </a>
       <a href="Kamyas.html">
-          <img src="images/FloraDex/Kamyas.png" alt="mango.png" id="plants">
+          <img src="images/FloraDex/Kamyas.png" alt="kamyas.png" id="plants">
       </a>
-      <a href="Golden Photos.html">
-          <img src="images/FloraDex/Golden Pothos.png" alt="mango.png" id="plants">
+      <a href="Golden-Pothos.html">
+          <img src="images/FloraDex/Golden Pothos.png" alt="goldenphotos.png" id="plants">
       </a>
       <a href="Oregano.html">
-          <img src="images/FloraDex/Oregano.png" alt="mango.png" id="plants">
+          <img src="images/FloraDex/Oregano.png" alt="oregano.png" id="plants">
       </a>  
     </div>
   </section>
