--- a/public/Croton.html
+++ b/public/Croton.html
@@ -43,7 +43,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
 
-  <header id="main-header" class="header-absolute hidden-sm hidden-xs">
+  <header id="main-header" class="header-v6 hidden-sm hidden-xs">
     <div class="container-fluid">
       <div class="inner row">
         <div class="logo col-lg-2 col-md-2">
@@ -129,7 +129,7 @@
     <div class="col-md-6">
       <div class="single-product-infor">
           <div class="pro-title">
-              <h1s>Croton</h1>
+              <h1>Croton</h1>
           </div>
 
           <div class="pro-tabs">
