--- a/public/Golden-Pothos.html
+++ b/public/Golden-Pothos.html
@@ -43,7 +43,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
 
-  <header id="main-header" class="header-absolute hidden-sm hidden-xs">
+  <header id="main-header" class="header-v6 hidden-sm hidden-xs">
     <div class="container-fluid">
       <div class="inner row">
         <div class="logo col-lg-2 col-md-2">
