--- a/public/Oregano.html
+++ b/public/Oregano.html
@@ -43,7 +43,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
 
-  <header id="main-header" class="header-absolute hidden-sm hidden-xs">
+  <header id="main-header" class="header-v6 hidden-sm hidden-xs">
     <div class="container-fluid">
       <div class="inner row">
         <div class="logo col-lg-2 col-md-2">
@@ -59,7 +59,7 @@
         </div>
       </div>
     </div>
-  </header>
+  </header>s
 
   <header id="header_mobile" class="header-mobile-default hidden-lg hidden-md">
     <div class="header-top">
