--- a/public/Kamyas.html
+++ b/public/Kamyas.html
@@ -40,8 +40,8 @@
 
 <body class="single-product">
     <!-- HEADER -->
-    <header id="main-header" class="header-v6 hidden-sm hidden-xs">
-      <div class="container-fluid">
+    <header id="main-header" class="header-v6 hidden-sm hidden-xs", style="background-color: blue;">
+      <div class="container-fluid", style="background-color: blue;">
         <div class="inner row">
           <div class="logo col-lg-2 col-md-2">
             <a href="/" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
