HTML Footer Fix

--- a/public/Floradex.html
+++ b/public/Floradex.html
@@ -75,7 +75,8 @@
       <div class="container">
         <div class="logo text-center">
           <a href="/" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
-          <a href="/" title="logo"><img alt="logo-theme" src="images/FloraDex/Floradex.png" class="img-responsive" /></a>
+          <a href="/" title="logo"><img alt="logo-theme" src="images/FloraDex/Floradex.png"
+              class="img-responsive" /></a>
         </div>
       </div>
     </div>
@@ -100,96 +101,96 @@
   <section class="blog-zigzag ">
     <div id="plantcontainer">
       <a href="Mango.html">
-          <img src="images/FloraDex/Mango.png" alt="mango.png" id="plants">
+        <img src="images/FloraDex/Mango.png" alt="mango.png" id="plants">
       </a>
       <a href="Croton.html">
-          <img src="images/FloraDex/Croton.png" alt="croton.png" id="plants">
+        <img src="images/FloraDex/Croton.png" alt="croton.png" id="plants">
       </a>
       <a href="Kamyas.html">
-          <img src="images/FloraDex/Kamyas.png" alt="kamyas.png" id="plants">
+        <img src="images/FloraDex/Kamyas.png" alt="kamyas.png" id="plants">
       </a>
       <a href="Golden-Pothos.html">
-          <img src="images/FloraDex/Golden Pothos.png" alt="goldenphotos.png" id="plants">
+        <img src="images/FloraDex/Golden Pothos.png" alt="goldenphotos.png" id="plants">
       </a>
       <a href="Oregano.html">
-          <img src="images/FloraDex/Oregano.png" alt="oregano.png" id="plants">
-      </a>  
+        <img src="images/FloraDex/Oregano.png" alt="oregano.png" id="plants">
+      </a>
     </div>
   </section>
   <div id="content_menu_popup" class="content-menu-popup hidden-sm hidden-xs">
     <div class="menu-popup-body">
-        <ul class="navbar-menu">
-            <li class="items">
-                <a href="/"><span>Home</span></a>
-            </li>
-            <li class="items">
-                <a href="Floradex.html"><span>Floradex</span></a>
-            </li>
-            <li class="items">
-                <a href="/"><span>Contact Us</span></a>
-            </li>
-        </ul>
+      <ul class="navbar-menu">
+        <li class="items">
+          <a href="/"><span>Home</span></a>
+        </li>
+        <li class="items">
+          <a href="Floradex.html"><span>Floradex</span></a>
+        </li>
+        <li class="items">
+          <a href="/"><span>Contact Us</span></a>
+        </li>
+      </ul>
     </div>
-</div>
-
-<div id="pbr-off-canvas" class="pbr-off-canvas sidebar-offcanvas hidden-lg hidden-md">
-    <div class="pbr-off-canvas-body">
-        <div class="offcanvas-head">
-            <button type="button" class="btn btn-close btn-toggle-canvas" data-toggle="offcanvas">
-                <i class="pe-7s-close-circle"></i>
-            </button>
-            <span>Menu</span>
-        </div>
-        <nav class="navbar navbar-offcanvas navbar-static">
-            <ul class="nav navbar-nav">
-                <li class="level1 active hassub">
-                    <a href="/">Home</a>
-                </li>
-                <li class="level1 hassub">
-                    <a href="Floradex.html">Floradex </a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</div>
-<footer class="footer">
-  <div class="container">
-      <div class="footer-bottom">
-          <div class="wrap-copyright">
-              <div class="copyright" id="coppy">
-                  Copyright © 2022 IdentiPlant. Created with <i class="fa fa-heart"></i> by<a href="#">Group 4</a>.
-              </div>
-              <div class="countries" id="coppy">
-                  <img src="images/logo-white.png" alt="logo" />Pamantasan ng Lungsod ng Maynila
-              </div>
-          </div>
-          <div class="row">
-              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
-                  <div class="menu-footer" >
-                      <ul>
-                          <li><a href="/" id="coppy">Home</a></li>
-                          <li><a href="../floradex.html" id="coppy">Floradex</a></li>
-                          <li><a href="/" id="coppy">  Terms of Use </a></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
-                  <div class="social">
-                      <a href="#" title="linkedin">
-                          <i class="fa fa-linkedin"></i>
-                      </a>
-                      <a href="#" title="instagram">
-                          <i class="    fa fa-instagram"></i>
-                      </a>
-                      <a href="https://github.com/proDev-Theron/dip-plantidentifier" title="GitHub">
-                          <i class="fa fa-github"></i>
-                      </a>
-                  </div>
-              </div>
-          </div>
-      </div>
   </div>
-</footer>
+
+  <div id="pbr-off-canvas" class="pbr-off-canvas sidebar-offcanvas hidden-lg hidden-md">
+    <div class="pbr-off-canvas-body">
+      <div class="offcanvas-head">
+        <button type="button" class="btn btn-close btn-toggle-canvas" data-toggle="offcanvas">
+          <i class="pe-7s-close-circle"></i>
+        </button>
+        <span>Menu</span>
+      </div>
+      <nav class="navbar navbar-offcanvas navbar-static">
+        <ul class="nav navbar-nav">
+          <li class="level1 active hassub">
+            <a href="/">Home</a>
+          </li>
+          <li class="level1 hassub">
+            <a href="Floradex.html">Floradex </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-bottom">
+        <div class="wrap-copyright">
+          <div class="copyright" id="coppy">
+            Copyright © 2022 IdentiPlant. Created with <i class="fa fa-heart"></i> by<a href="#">Group 4</a>.
+          </div>
+          <div class="countries" id="coppy">
+            <img src="images/logo-white.png" alt="logo" />Pamantasan ng Lungsod ng Maynila
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
+            <div class="menu-footer">
+              <ul>
+                <li><a href="/" id="coppy">Home</a></li>
+                <li><a href="../floradex.html" id="coppy">Floradex</a></li>
+                <li><a href="/" id="coppy"> Terms of Use </a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
+            <div class="social">
+              <a href="#" title="linkedin">
+                <i class="fa fa-linkedin"></i>
+              </a>
+              <a href="#" title="instagram">
+                <i class="    fa fa-instagram"></i>
+              </a>
+              <a href="https://github.com/proDev-Theron/dip-plantidentifier" title="GitHub">
+                <i class="fa fa-github"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <a href="#" title="sroll" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
 
