--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" type="text/css" href="css/animation.css">
   <!-- MAIN STYLE -->
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/floradex.css">
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
