--- a/public/Golden-Pothos.html
+++ b/public/Golden-Pothos.html
@@ -60,7 +60,7 @@
                 <a href="index.html">
                     <img src="images/ipblue.png" alt="IP" id="home">
                 </a>
-                <img src="images/Golden-Pothos/goldenpothostitle.png" alt="mango" id="banner">
+                <img src="images/Golden-Pothos/goldenpothostitle.png" alt="mango" id="goldy">
             </div>
           <div class="header-right col-lg-10 col-md-10">
             <div class="main-menu">
