--- a/Floradex.html
+++ b/Floradex.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <title>Floradex</title>
+  <title>IdentiPlant</title>
   <!-- GOOGLE FONT -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700" rel="stylesheet">
@@ -57,7 +57,7 @@
     <div class="container-fluid">
       <div class="inner row">
         <div class="logo col-lg-2 col-md-2">
-          <a href="/" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
+          <a href="../public/index.html" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
         </div>
         <div class="header-right col-lg-10 col-md-10">
           <div class="main-menu">
@@ -168,7 +168,7 @@
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
             <div class="menu-footer">
               <ul>
-                <li><a href="/" id="coppy">Home</a></li>
+                <li><a href="../public/index.html" id="coppy">Home</a></li>
                 <li><a href="../floradex.html" id="coppy">Floradex</a></li>
                 <li><a href="/" id="coppy"> Terms of Use </a></li>
               </ul>
