--- a/Croton.html
+++ b/Croton.html
@@ -177,7 +177,7 @@
                   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
                     <div class="menu-footer">
                       <ul>
-                        <li><a href="/dip-plantidentifier/public/index.html" id="coppy">Home</a></li>
+                        <li><a href="../public/index.html" id="coppy">Home</a></li>
                         <li><a href="../floradex.html" id="coppy">Floradex</a></li>
                         <li><a href="/" id="coppy"> Terms of Use </a></li>
                       </ul>
