--- a/Floradex.html
+++ b/Floradex.html
@@ -57,7 +57,7 @@
     <div class="container-fluid">
       <div class="inner row">
         <div class="logo col-lg-2 col-md-2">
-          <a href="index.html" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
+          <a href="../public/index.html" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
         </div>
         <div class="header-right col-lg-10 col-md-10">
           <div class="main-menu">
