--- a/Kamyas.html
+++ b/Kamyas.html
@@ -153,7 +153,7 @@
               <nav class="navbar navbar-offcanvas navbar-static">
                 <ul class="nav navbar-nav">
                   <li class="level1 active hassub">
-                    <a href="../public/index.html">Home</a>
+                    <a href="../dip-plantidentifier/">Home</a>
                   </li>
                   <li class="level1 hassub">
                     <a href="Floradex.html">Floradex </a>
@@ -177,9 +177,9 @@
                   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
                     <div class="menu-footer">
                       <ul>
-                        <li><a href="../public/index.html" id="coppy">Home</a></li>
+                        <li><a href="../dip-plantidentifier/" id="coppy">Home</a></li>
                         <li><a href="../floradex.html" id="coppy">Floradex</a></li>
-                        <li><a href="/" id="coppy"> Terms of Use </a></li>
+                        <li><a href="../dip-plantidentifier/" id="coppy"> Terms of Use </a></li>
                       </ul>
                     </div>
                   </div>
